--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 				</h2>
 			</div>
 			<div class="bottom-text">
-				lời chúc từ leanhquan
+				edited by quanlee
 			</div>
 		</main>
         <svg class="cursor" width="80" height="80" viewBox="0 0 80 80">
